--- a/src/index.css
+++ b/src/index.css
@@ -288,11 +288,20 @@ h4{
   border: 0;
   background-color: transparent;
 }
+.cart-container{
+  display: flex;
+  gap: 20px;
+  margin-top: 50px;
+  margin-left: 80px;
+  /* justify-content: center;  */
+}
 .cart{
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   padding: 20px;
-  width: fit-content;
+  width: 55%;
+  
+
 }
 .cart-item{
   display: flex;
@@ -317,6 +326,34 @@ hr{
   flex-direction: column;
   align-items: end;
   justify-content: space-between;
+}
+.order-summary{
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  height: fit-content;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 35%;
+  position: sticky;
+  top: 0;
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+.order-summary input{
+  margin: auto;
+  margin-top: 10px;
+  color: #fff;
+  padding: 4%;
+  width: 100%;
+  background-color: #000;
+  border: 0;
+  border-radius: 60px;
+}
+.summary-detail{  
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 
 /* Hide buttons on larger screens */
@@ -400,10 +437,12 @@ header {
   display: flex;
   flex-direction: column;
   padding: 20px;
+  z-index: 100;
 }
 
 .sidebar.open {
   left: 0;
+
 }
 
 .sidebar h1 {
@@ -504,6 +543,16 @@ header {
   }
   .second-logo{
     display: block;
+    text-decoration: none;
+    color: #000;
+  }
+  .cart-container{
+    flex-direction: column;
+    /* align-items: center; */
+  }
+  .cart{
+    width: 100%;
+    margin-right: 80px;
   }
 
 }
