--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,10 @@ header h1{
 .cart-item{
   padding: 10px;
 }
+.brands-img{
+  width: 100%;
+  /* height: 100%; */
+}
 .group{
   display: flex; 
   flex-direction:column;
