--- a/src/index.css
+++ b/src/index.css
@@ -157,6 +157,17 @@ h4{
   height: 350px;
   /* border-radius: 80px; */
 }
+.section-5{
+  margin-top: 30px;
+}
+.testimony-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+}
 .testimonial{
   display: flex;
   flex-direction: column;
@@ -165,7 +176,11 @@ h4{
   width: 30%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 20px;
-  padding: 30px 30px 60px 30px;
+  padding: 30px 30px 40px 30px;
+}
+.testimonial img{
+  width: 180px;
+  height: auto;
 }
 .testimonial h3{
   font-size: 30px;
@@ -574,6 +589,13 @@ header {
   .section-2 h1{
     font-size: 8.5vw;
 
+  }
+  .testimony-div{
+    flex-direction: column;
+    gap: 20px;
+  }
+  .testimonial{
+    width: 80%;
   }
   .section-3 h1{
     font-size: 8.5vw;
