--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,7 @@ header h1{
   border-radius: 30px;
 }
 h4{
-  font-size: 30px;
+  font-size: clamp(1.5rem, 2vw, 2rem);
 }
 .section-4{
   display: flex;
@@ -464,6 +464,9 @@ header {
   display: flex;
   gap: 20px;
   list-style-type: none;
+}
+.mobile-head h1{
+  font-size: 30px;
 }
 
 .header-icons {
