--- a/src/index.css
+++ b/src/index.css
@@ -199,14 +199,14 @@ h4{
   width: 30%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 20px;
-  padding: 30px 30px 40px 30px;
+  padding: 20px 20px 20px 20px;
 }
 .testimonial img{
   width: 120px;
   height: auto;
 }
 .testimonial h3{
-  font-size: 25px;
+  font-size: 20px;
   color: #000;
 }
 
@@ -439,9 +439,22 @@ hr{
   .email-subscription {
     flex-direction: column;
     align-items: baseline;
-    gap: 20px 
+    gap: 20px;
+    top: -10.5rem;
 
   }
+
+  .stud{
+    height: 210px !important;
+  }
+
+  .foot{
+    margin-top: 13.5rem;
+  }
+}
+
+.stud{
+  height: 150px;
 }
 
 .carousel-btn:hover {
@@ -626,7 +639,6 @@ header {
   }
   .testimonial p{
     font-size: 10px;
-    /* color: rgba(0, 0, 0, 0.6); */
   }
   .section-3 h1{
     font-size: 8.5vw;
@@ -646,6 +658,11 @@ header {
     gap: 10px;
     justify-content: start;
   }
+
+  .stud{
+    height: 240px !important;
+  }
+
   .email-subscription{
     /* align-items: center; */
     top: -11rem;
