--- a/src/index.css
+++ b/src/index.css
@@ -149,14 +149,14 @@ header h1{
   height: 36vh;
   display: flex;
   justify-content: center;
-  min-width: 250px;
+  min-width: 200px;
   /* min-height: 300px; */
-  border-radius: 30px;
+  border-radius: 20px;
 }
 .item-bg img{
   /* width: 100%; */
   height: 100%;
-  border-radius: 30px;
+  /* border-radius:; */
 }
 h4{
   font-size: clamp(1.5rem, 2vw, 2rem);
@@ -229,9 +229,9 @@ h4{
   font-size: 20px;
 }
 .email-sub-div{
-    display:"flex";
+    display:"flex" !important;
     gap: 5px; 
-    align-items: baseline;
+    align-items: baseline ;
     /* justify-content: end; */
     flex-direction: column;
     background-color:#fff; 
@@ -615,6 +615,8 @@ header {
   }
  
   .item-bg{
+    height: 200px;
+    width: 150px;
     /* max-height: 200px; */
   }
 
