--- a/src/index.css
+++ b/src/index.css
@@ -91,10 +91,10 @@ header h1{
   padding: 40px;
 }
 .section-2{
-  margin: 20px;
+  margin-left: 20px;
 }
 .section-3{
-  margin: 20px;
+  margin-left: 20px;
 }
 .section-3 hr{
   /* border: none;
