--- a/src/index.css
+++ b/src/index.css
@@ -384,13 +384,17 @@ h4{
   justify-content: space-between;
 }
 .cart-shirt-div{
-  width:20%;
+  width:30vw;
+  height: 30vw;
+  max-width: 12 0px;
+  max-height: 120px;
   background: #F0F0F0;
-  margin-right: 15px;
+  /* margin-right: 15px; */
   border-radius: 10px;
 }
 .cart-shirt{
   width: 100%;
+  height: 100%;
 }
 hr{
   border: none;
@@ -399,7 +403,7 @@ hr{
 }
 .itemNumberDiv{
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column;   */
   align-items: end;
   justify-content: space-between;
 }
