--- a/src/index.css
+++ b/src/index.css
@@ -372,7 +372,7 @@ h4{
 .cart{
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 20px;
-  padding: 20px;
+  padding: 10px;
   width: 55%;
   display: flex;
   flex-direction: column;
@@ -381,12 +381,13 @@ h4{
 }
 .cart-item{
   display: flex;
+  /* gap: 0%; */
   justify-content: space-between;
 }
 .cart-shirt-div{
   width:30vw;
   height: 30vw;
-  max-width: 12 0px;
+  max-width: 120px;
   max-height: 120px;
   background: #F0F0F0;
   /* margin-right: 15px; */
@@ -405,7 +406,8 @@ hr{
   display: flex;
   /* flex-direction: column;   */
   align-items: end;
-  justify-content: space-between;
+  gap: 15vw;
+  /* justify-content: space-between; */
 }
 .order-summary{
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -451,7 +453,11 @@ hr{
     display: none;
   }
 }
-
+@media (max-width: 934px) {
+    .itemNumberDiv{
+      gap: 2vw;
+    }
+}
 @media (max-width: 1168px) {
   .email-subscription {
     flex-direction: column;
@@ -728,6 +734,9 @@ header {
   .order-summary{
     width: 100%;
     /* margin-top: 20px; */
+  }
+  .itemNumberDiv{
+    /* gap: clamp(10px,3rem, 50px); */
   }
   .shop{
     grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
