--- a/src/index.css
+++ b/src/index.css
@@ -457,7 +457,7 @@ hr{
 .product-image{
   background-color: #F0EEED;
   width: 33vw;
-  min-width: 350px;
+  min-width: 270px;
   height: 80vh;
   border-radius: 20px;
   display: flex;
@@ -471,7 +471,7 @@ hr{
 .small-image{
   background-color: #F0EEED;
   width: 11vw;
-  min-width: 130px;
+  min-width: 100px;
   height: 25vh;
   border-radius: 20px;
   margin-bottom: 15px;
@@ -822,5 +822,10 @@ header {
     grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
     gap: 10px;
   }
-
+  .product-image{
+    height: 40vh;
+  }
+  .small-image{
+    height: 12.3vh;
+  }
 }
