--- a/src/index.css
+++ b/src/index.css
@@ -452,12 +452,13 @@ hr{
   display: flex;
   margin-left: 0px;
   gap: 25px;
+  align-items: center;
 }
 
 .product-image{
   background-color: #F0EEED;
   width: 33vw;
-  min-width: 270px;
+  min-width: 250px;
   height: 80vh;
   border-radius: 20px;
   display: flex;
@@ -471,7 +472,7 @@ hr{
 .small-image{
   background-color: #F0EEED;
   width: 11vw;
-  min-width: 100px;
+  min-width: 90px;
   height: 25vh;
   border-radius: 20px;
   margin-bottom: 15px;
@@ -520,8 +521,8 @@ hr{
   border: 0;
 }
 .product-sec-1 hr{
-  width: 100%; /* Make it span across the div */
-  border: 1px  #ccc; /* Give it a visible border */
+  width: 100%; 
+  border: 1px  #ccc; 
 }
 /* Hide buttons on larger screens */
 @media (min-width: 768px) {
